# Godot-vehicle-sim

./: .gitignore  ANALISE_TIRE_CONTACT.md  ContractMerger.gd  NeutralInfluenceContract.gd  README.md  apply_raycast_influence.gd  applyinfluencetoshaderstate.gd  contactpatchstate.gd  shadercontactreader.gd  tiresample.txt
Engine/: CombustionSystem.gd  EngineConfig.gd  InductionSystem.gd  InductionSystemManager.gd  OilSystem.gd  anti_lag_system.gd  cylinderhead.gd  sound_system.gd  staggered_turbo_system.gd  twin_turbo_system.gd  wankel_combustion.gd
contracts/: apply_raycast_influence.txt  applyinfluencetoshaderstate.txt  contractmergerlegacy.txt  contractratelimiter.txt  influencecontractbuilder.txt
docs/: ARCHITECTURE_CURRENT.md  ARCHITECTURE_RULES.md  CORE_BACKEND_LAYOUT.md  EXECUTION_BACKLOG.md  GODOT_DUPLICATION_SWEEP.md  IMPROVEMENT_PRIORITY_PLAN.md  MODULE_MATURITY_SWEEP.md  PARITY_FRAMEWORK.md  RUST_LOGIC_MIRROR_COVERAGE.md  RUST_MIRROR_SWEEP.md  TIRES_LOGIC_PORT_SWEEP.md  core_bridge_contract.md  core_buffer_layout_v0.md  suspension_rust_plan.md  tire_core_backend_rules.md  tire_runtime_architecture.md  tire_rust_migration_order.md  wheel_rust_plan.md
engine/: EmissionSystem.gd  Engine.gd  Fuel System.gd  Ignitionsystem.gd  IntakeSystem.gd  OilSystem.gd  compound_turbo_system.gd  naturally_aspirated_system.gd  staggered_turbo_system.gd  (+1 more)
rust/tire_core/: Cargo.toml
rust/tire_core/src/: contract.rs  conventions.rs  lib.rs  tire_core_reference.rs  transients.rs
rust/tire_core/tests/: golden_snapshots.rs
rust/tire_core/tests/data/: golden_snapshot_v1.json
(+286 files in other folders)
