[package]
name = "tire_core"
version = "0.1.0"
edition = "2021"

[lib]
name = "tire_core"
path = "src/lib.rs"

[features]
default = []
serde = ["dep:serde", "dep:serde_json"]
validator = []

[dependencies]
serde = { version = "1", features = ["derive"], optional = true }
serde_json = { version = "1", optional = true }
